// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Breadcrumbs components Disables a tab 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="breadcrumb"
  >
    <span
      className="disabled"
    >
      Should Be Disabled
    </span>
  </li>
</ol>
`;

exports[`Breadcrumbs components shows active tab 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="active breadcrumb"
  >
    <a
      aria-controls="page-2"
      aria-expanded="true"
      onClick={[Function]}
    >
      Active
    </a>
  </li>
</ol>
`;

exports[`Breadcrumbs components shows not tab 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="breadcrumb"
  >
    <a
      aria-controls="page-1"
      aria-expanded="false"
      onClick={[Function]}
    >
      Not Active
    </a>
  </li>
</ol>
`;

exports[`Breadcrumbs components works with multiple tabs 1`] = `
<ol
  className="breadcrumb"
>
  <li
    className="breadcrumb"
  >
    <a
      aria-controls="page-1"
      aria-expanded="false"
      onClick={[Function]}
    >
      Not Active
    </a>
  </li>
  <li
    className="active breadcrumb"
  >
    <a
      aria-controls="page-2"
      aria-expanded="true"
      onClick={[Function]}
    >
      Active
    </a>
  </li>
</ol>
`;
